Bug 92049 - icon changes do not affect drop-down icons in New menu until close
Summary: icon changes do not affect drop-down icons in New menu until close
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
PreBibisect
Hardware: All All
: low minor
Assignee: Maxim Monastirsky
URL:
Whiteboard: target:5.2.0
Keywords: regression
Depends on:
Blocks:
 
Reported: 2015-06-13 16:19 UTC by Jared
Modified: 2016-10-25 19:08 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jared 2015-06-13 16:19:51 UTC
When making an icon change, the icons in the drop-down New menu do not change to match the current icon theme until the document is closed and opened.
Then entire program does not need to be restarted, simply the open document.
Comment 1 Yousuf Philips (jay) (retired) 2015-06-14 21:20:34 UTC
Hi Jared,

I can confirm it in master and 4.3.7. I tested 3.3.0 and this doesnt occur there so its a regression.

Version: 5.1.0.0.alpha1+
Build ID: 3754474cdea72ebe7f09457ef82a5c3131d06b78
TinderBox: Linux-rpm_deb-x86@45-TDF, Branch:master, Time: 2015-06-13_07:55:37
Comment 2 Robinson Tryon (qubit) 2015-12-14 05:32:42 UTC Comment hidden (obsolete)
Comment 3 Joel Madero 2015-12-17 15:15:27 UTC
Works as expected now:

Bodhi Moksha
Version: 5.2.0.0.alpha0+
Build ID: 5df326438fd3a5613a52b4de1935426911ff1301

Closing as WFM - if someone can still confirm this on a master build set to NEW again and add bibisectRequest to the keywords. Thanks
Comment 4 Yousuf Philips (jay) (retired) 2015-12-23 06:08:17 UTC
Still present - Linux Mint 17.2 XFCE.

Version: 5.2.0.0.alpha0+
Build ID: 0b1da98da44bc9acb9e42a5cd1842adf9d82a415
CPU Threads: 2; OS Version: Linux 3.13; UI Render: default; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2015-12-22_05:54:37
Locale: en-US (en_US.UTF-8)
Comment 5 Joel Madero 2015-12-23 07:10:08 UTC
Oh oops - messed up on this one. Tested with bibisect and it must have started between 3.3 and 3.5.beta0

Thanks Jay for re-testing.


P.S. bibisectRequest is now keyword not whiteboard :)
Comment 6 Adolfo Jayme Barrientos 2016-01-23 06:20:13 UTC
*** Bug 97317 has been marked as a duplicate of this bug. ***
Comment 7 Commit Notification 2016-03-16 23:19:33 UTC
Maxim Monastirsky committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1caac283894d0deeac564c67cd816cc2907f9ac7

tdf#92049 NewMenuController: track icon theme changes too

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.