tdf#92049 NewMenuController: track icon theme changes too

Change-Id: I2f2c990b2cbacddf94bf74329d641d5a7e489773